--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "tauri" : "tauri"
   },
   "dependencies": {
     "pinia": "^3.0.3",
@@ -21,6 +22,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.53.1",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/cli": "^2.6.2",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.32",
